# pandas-wizard

./: .editorconfig  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  PANDAS Utilities.md  README.md  Stationarity & Unit Roots.md  Time Series Utilities.md  moving_average.py  pandas_.py  pandas_wrappers_.py  pyproject.toml  requirements.txt  setup.py  stationarity.py  ts_models.py
.github/workflows/: code-linting.yml  python-publish.yml
docs/: aggregate.md  conf.py  functions.md  index.md  index.rst  modules.md  modules.rst  pandaswizard.rst  requirements.txt  timeseries.md  wrappers.md
pandaswizard/: __init__.py  aggregate.py  window.py  wrappers.py
pandaswizard/functions/: __init__.py  collate.py  statistics.py
pandaswizard/timeseries/: __init__.py  ts_featuring.py  ts_models.py
pdutils/: __init__.py
